# OptiSpline

./: LICENSE  README.md
doc/: README.md
frontend/desktop/cmake/: AppConsoleDemo.cpp  AppStroke.h  CMakeLists.txt  types.h
frontend/desktop/win/msvs/: OptiSpline.sln
frontend/desktop/win/msvs/AppConsoleDemo/: AppConsoleDemo.cpp  AppConsoleDemo.vcxproj  AppConsoleDemo.vcxproj.filters
frontend/desktop/win/msvs/AppDemo/: AppDemo.cpp  AppDemo.rc  AppDemo.vcxproj  AppDemoDlg.cpp  AppDemoDlg.h  BStroke.cpp  BStroke.h  DrawWnd.cpp  DrawWnd.h  MSGPACK.H  RButton.h  TABLET.H  Wtwnd.cpp  Wtwnd.h  resource.h
frontend/msvs/: OptiSpline.sln
frontend/msvs/AppDemo/: AppDemo.h  AppDemo.rc  AppDemo.vcproj  AppDemo.vcxproj  AppDemo.vcxproj.filters  DrawWnd.cpp  DrawWnd.h  RButton.cpp  StdAfx.cpp  StdAfx.h
frontend/msvs/AppDemo/RES/: AppDemo.rc2  CUR00002.CUR  CURSOR1.CUR
frontend/msvs/WINTAB/INCLUDE/: WINTABX.H
frontend/msvs/WINTAB/LIB/ALPHA/: WINTAB32.DEF
frontend/msvs/WINTAB/LIB/I386/: WINTAB32.DEF
frontend/web/AppDemo/: index.html
frontend/web/AppDemo/css/: grid.css
frontend/web/AppDemo/scripts/: app_demo.js  app_stroke.js
lib/builds/cmake/: CMakeLists.txt
lib/builds/win/msvs/AppStroke/: AppStroke.vcxproj  AppStroke.vcxproj.filters
lib/builds/win/msvs/OptiSpline/: OptiSpline.cpp  (+6 more)
lib/src/c/: AppStroke.c  AppStroke.h  Basis.c  Basis.h  Stroke.c  Stroke.h  types.h
lib/src/cplusplus/: AppStroke.cpp  AppStroke.h  Basis.cpp  Basis.h  FRect.cpp  FRect.h  OptiSplineContext.cpp  OptiSplineContext.h  Stroke.cpp  Stroke.h  StrokeAttr.cpp  StrokeAttr.h  _RSDATA.H
(+5 files in other folders)
